--- a/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/userChrome.css
+++ b/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/userChrome.css
@@ -6,11 +6,11 @@
 @import "personalbar/personalbar.css";
 @import "popup/popup.css";
 @import "urlbar/urlbar.css";
-@import "findbar/findbar.css";
+/*@import "findbar/findbar.css";*/
 
-//@import "manual/findbar.css";
+@import "manual/findbar.css";
 @import "manual/manual.css";
-@import "manual/roomy.css";
+@import "manual/roomy2.css";
 @import "manual/simpleMenuWizard.css";
 
 
