Update Materialfox stuff

--- a/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/manual/findbar.css
+++ b/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/manual/findbar.css
@@ -50,3 +50,6 @@ findbar{
   border-right: 1px solid var(--chrome-content-separator-color);
 }
 
+.findbar-match-diacritics.findbar-button.tabbable {
+    display: none !important;
+}
