update firefox stuff

--- a/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/manual/manual.css
+++ b/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/manual/manual.css
@@ -80,3 +80,11 @@ menupopup menu,
 }
 
 /* Removed pinned tabs from topbar *//* .tabbrowser-tab[pinned] { display:none!important } */
+
+@-moz-document url(about:blank) {
+    html,body { background: #2A2A2E !important;}
+}
+
+#tabbrowser-tabpanels{
+  background-color: #2A2A2E !important;
+}
