--- a/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/manual/simpleMenuWizard/link-context.css
+++ b/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/manual/simpleMenuWizard/link-context.css
@@ -12,7 +12,7 @@
 /* #context-openlink,                    /* Open Link in New Window          */
 /* #context-openlinkprivate,             /* Open Link in New Private Window  */
 /* #context-sep-open,                    /************ Separator *************/
- #context-bookmarklink,                /* Bookmark This Link               */
+/* #context-bookmarklink,                /* Bookmark This Link               */
 /* #context-savelink,                    /* Save Link As...                  */
 /* #context-savelinktopocket,            /* Save Link to Pocket              */
 /* #context-copylink,                    /* Copy Link Location               */
