--- a/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/manual/simpleMenuWizard/main-menubar.css
+++ b/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/manual/simpleMenuWizard/main-menubar.css
@@ -178,9 +178,10 @@
 /* #helpMenu,                               /* Help                           */
 /* #menu_openHelp,                              /* Firefox Help                   */
 /* #menu_openTour,                              /* Firefox Tour                   */
+/* #help_importFromAnotherBrowser,              /* Import from Another Browser... */
 /* #menu_keyboardShortcuts,                     /* Keyboard Shortcuts             */
-/* #menu_troubleShooting,                       /* Troubleshooting Information    */
-/* #menu_feedbackPage,                          /* Submit Feedback…               */
+/* #troubleShooting,                            /* Troubleshooting Information    */
+/* #feedbackPage,                               /* Submit Feedback…               */
 /* #helpSafeMode,                               /* Restart with Add-ons Disabled… */
 /* #menu_HelpPopup_reportPhishingtoolmenu,      /* Report Deceptive Site…         */
 /* #menu_HelpPopup_reportPhishingErrortoolmenu, /* This isn’t a deceptive site…   */
