--- a/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/manual/simpleMenuWizard/select-context.css
+++ b/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/manual/simpleMenuWizard/select-context.css
@@ -11,8 +11,10 @@
 /* #context-selectall,                    /* Select All                       */
 /* #context-sep-selectall,                /************ Separator *************/
 /* #context-searchselect,                 /* Search [Google] for "[selected]" */
+/* #context-print-selection,              /* Print Selection                  */
 /* #context-viewpartialsource-selection,  /* View Selection Source            */
 /* #inspect-separator,                    /************ Separator *************/
+/* #context-inspect-a11y,                 /* Inspect Accessibility Properties */
 /* #context-inspect,                      /* Inspect Element (Q)              */
 
 #leave_this_dummy_here
