--- a/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/userChrome.css
+++ b/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/userChrome.css
@@ -12,6 +12,7 @@
 @import "manual/manual.css";
 @import "manual/roomy2.css";
 @import "manual/simpleMenuWizard.css";
+/*@import "manual/icons.css";*/
 
 /* Do not edit this section of this file (outside the Browser Toolbox). It is managed by the reStyle extension. */ /*START:113eab28-861b-4254-bfa1-f58d6d376f0c*/
 
