--- a/.mozilla/firefox/cfa9z3ob.default-release-back-ovfs/chrome/userChrome.css
+++ b/.mozilla/firefox/cfa9z3ob.default-release-back-ovfs/chrome/userChrome.css
@@ -8,7 +8,7 @@
 @import "urlbar/urlbar.css";
 @import "findbar/findbar.css";*/
 
-@import "manual/findbar.css";
+/*@import "manual/findbar.css";*/
 @import "manual/manual.css";
 @import "manual/roomy2.css";
 @import "manual/simpleMenuWizard.css";
