--- a/.mozilla/firefox/cfa9z3ob.default-release-back-ovfs/chrome/manual/findbar.css
+++ b/.mozilla/firefox/cfa9z3ob.default-release-back-ovfs/chrome/manual/findbar.css
@@ -1,16 +1,18 @@
 /* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/floating_findbar_on_top.css made available under Mozilla Public License v. 2.0
 See the above repository for updates as well as full license text. */
 
+/* Note that privacy.resistFingerprinting.letterboxing prevents this from working properly */
+
 findbar{
   -moz-box-ordinal-group: 0;
-  margin-bottom: calc(0px - 2 * var(--toolbarbutton-inner-padding) -  25px);
+  margin-bottom: -33px;
   position: relative;
   border-top: none !important;
+  padding: 0 !important;
   transition: transform 82ms linear, opacity 82ms linear 32ms !important;
   background: none !important;
   pointer-events: none;
   z-index: 1;
-  border-radius: 10px;
 }
 
 .findbar-container > .findbar-find-fast{
@@ -30,9 +32,12 @@ findbar > .close-icon{
 findbar > .findbar-container{
   -moz-box-direction: reverse;
   border-left-width: 1px;
-  border-radius: 10px 0px 0px 10px;
+  border-bottom-left-radius: 4px;
 }
 
+.findbar-closebutton{ margin: 0 !important; border-radius: 0 !important; padding: 5px !important; }
+.findbar-closebutton > image{ padding: 3px }
+.findbar-closebutton:hover > image{ background: var(--toolbarbutton-hover-background) !important; border-radius: 4px }
 findbar > .findbar-container > hbox{ margin: 0 5px }
 
 findbar::before{
@@ -48,8 +53,4 @@ Delete if you want findbar to begin from right window edge
 findbar{
   margin-right: 16px;
   border-right: 1px solid var(--chrome-content-separator-color);
-}
-
-.findbar-match-diacritics.findbar-button.tabbable {
-    display: none !important;
 }
